--- a/app/views/layouts/[LAYOUT_NAME].html.erb
+++ b/app/views/layouts/[LAYOUT_NAME].html.erb
@@ -36,7 +36,7 @@
 
     <%= javascript_include_tag "application" %>
   </head>
-  <body class="<%= controller_name %> <%= action_name %>">
+  <body>
 
     <div class="navbar navbar-[*fixed-top">
       <div class="navbar-inner">
@@ -49,7 +49,10 @@
           <a class="brand" href="#">Treebook</a>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "All Statuses", statuses_path  %></li>
+              <li><%= link_to "Link1", "/path1"  %></li>
+              <li><%= link_to "Link2", "/path2"  %></li>
+              <li><%= link_to "Link3", "/path3"  %></li>
+            </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -75,7 +78,7 @@
         </div><!--/row-->
 
       <footer>
-        <p>&copy; Treebook 2013</p>
+        <p>&copy; Company 2013</p>
       </footer>
 
     </div> <!-- /container -->
